# fface

./: CMakeLists.txt  README.md
include/fface/: arguments.hpp  library_loader.hpp  processor.hpp
include/fface/detector/: detector.hpp
lib/: CMakeLists.txt
lib/detector/: detector.cpp  detector_decorator.hpp  detector_logger.hpp  detector_opencv.hpp
src/: main.cpp
src/core/: arguments.cpp  library_loader.cpp  processor.cpp
tests/: test_processor.cpp
tests/detector/: test_detector.cpp
